--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,16 @@
+# Bright Data Credentials
+BRIGHT_DATA_USERNAME=your_brightdata_username
+BRIGHT_DATA_PASSWORD=your_brightdata_password
+BRIGHT_DATA_API_TOKEN=your_mcp_api_token
+
+# LLM Configuration
+OPENAI_API_KEY=your_openai_key
+LLM_MODEL=gpt-4
+
+# Optional (for RAG or advanced features)
+PGVECTOR_URL=postgresql://user:password@localhost:5432/smartshopper
+
+# MCP Server Settings
+MCP_PORT=8191
+MCP_HOST=http://localhost
 
