--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # Bright Data Credentials
 BRIGHT_DATA_USERNAME=your_brightdata_username
 BRIGHT_DATA_PASSWORD=your_brightdata_password
-BRIGHT_DATA_API_TOKEN=your_mcp_api_token
+BRIGHT_DATA_API_TOKEN="bae5e93d-8ba1-4191-9f7f-16348592d0bf"
 
 # LLM Configuration
 OPENAI_API_KEY=your_openai_key
